<resources>
    <string name="Date">Select a date</string>
    <string name="default_client_id">976479568343-jasir3a7rb0b6sjd0pd188u1q6gv70vg.apps.googleusercontent.com</string>
    <string name="app_name">Evo</string>
    <string name="Create_an_Event">Create an Event</string>
    <string name="Join_Event">Join Event</string>
    <string name="example_email">example@mail.com</string>
    <string name="password_example">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="profile_Picture">profile picture</string>
    <string name="phone_number_example">(103)2241518</string>
    <string name="dob">Date of birth</string>
    <string name="register">Register</string>
    <string name="back">back</string>
    <string name="reset_password">Reset your password</string>
    <string name="submit">Submit</string>
    <string name="full_name" />
    <string name="full_names">Name</string>
    <string name="last_name">Last Name</string>
    <string name="select_dob">mm/dd/yyyy</string>
    <string name="Btn_test">Button Test</string>
    <string name="Sign_Google">Sign in with Google</string>
    <string name="name">Name</string>
    <string name="Adress">Address</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="previous" />
    <string name="full_name_profile">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="events_attended">Events Attended</string>
    <string name="change_password">Change Password</string>
    <string name="Logout">Logout</string>
    <string name="evo">EVO</string>
    <string name="none">none</string>
    <string name="_settings">Settings</string>
    <string name="_plus">Plus</string>
    <string name="messages">Messages</string>
    <string name="_create">Create</string>
    <string name="textview">TextView</string>
    <string name="_mp">messagep</string>
    <string name="_m">messagepicture</string>
    <string name="_p">profp</string>
    <string name="_sp">settingsp</string>
    <string name="_p2" />
    <string name="_motto">AN EVENT ORGANIZING TOOL</string>
    <string name="_myevets">My Events</string>
    <string-array name="theme">
        <item>Music</item>
        <item>Comic</item>
        <item>Cars</item>
        <item>Movie</item>
    </string-array>
    <string name="title_activity_qr_code_scaner">qr_code_scaner</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="EVO" />
    <string name="evo1">EVO</string>


    <string name="scan_qr"> Check in </string>
    <string name="Calendar">Calendar</string>
    <string name="join">Join</string>
    <string name="messagesss" />
    <string name="search">Search Event</string>
    <string name="imageview">ImageView</string>
    <string name="date_example">mm/dd/yyyy</string>
    <string name="Creator_name">Creator  name</string>
    <string name="category">Category</string>
    <string name="description">Event Description</string>
    <string name="addres">Address</string>
    <string name="descr">Event Description</string>
    <string name="scan">Scan QR code to Access Event</string>
    <string name="creator">Organizer</string>
    <string name="atendees">Atendees</string>
    <string name="attendees">Attendees</string>
    <string name="Eventactivities">Activities Scheduled</string>
    <string name="text" />
    <string name="say_hi">Say hi</string>
    <string name="Attending">· Attending</string>
    <string name="day1">Day1</string>
    <string name="night">Night</string>
    <string name="Light">Light Mode</string>
    <string name="Night">Night Mode</string>
</resources>