<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText

        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="textPersonName|text" />

    <EditText

        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:hint="@string/Date"
        android:inputType="datetime"
        android:minHeight="48dp"
        android:importantForAutofill="no"/>


    <EditText
        android:id="@+id/txtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDate"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:hint="@string/Adress"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"

        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLocation"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:autofillHints="Theme"
        android:contentDescription="@string/Sign_Google"
        android:minHeight="48dp" />



</RelativeLayout>