<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot_password">

    <ProgressBar
        android:id="@+id/reset_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/reset_back"
        android:layout_width="77dp"
        android:layout_height="66dp"
        android:background="#00FFFFFF"
        android:clickable="false"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:tint="#35A9F6"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/profile_picture_2"
        android:layout_width="161dp"
        android:layout_height="192dp"
        android:background="#0027B196"
        android:contentDescription="@string/profile_Picture"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278"
        app:srcCompat="@drawable/user_"
        app:tint="#C411C8FF"
        app:tintMode="multiply" />

    <EditText
        android:id="@+id/email_reset"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_marginTop="97dp"
        android:ems="10"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture_2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Reset_Textview"
        android:layout_width="154dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="53dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture_2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/reset_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/submit"
        android:textColor="#120B0B"
        app:backgroundTint="#C411C8FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reset"
        app:layout_constraintVertical_bias="0.019"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>