<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Create_an_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:ignore="MissingDefaultResource"

    >

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="248dp"
        android:layout_height="168dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        app:srcCompat="@drawable/user_"
        app:tint="#C411C8FF"
        app:tintMode="multiply"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/user_"
        tools:targetApi="m" />

    <EditText
        android:id="@+id/TextEmailAddress"
        android:layout_width="233dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:textAllCaps="false"
        android:textColor="#ED0B0A0A"
        android:textColorHint="#F7757575"
        android:textColorLink="#E6ACAC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/TextPass"
        android:layout_width="232dp"
        android:layout_height="68dp"
        android:ems="10"
        android:hint="@string/password_example"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="Login"
        android:textColor="#4E342E"
        android:textColorHighlight="#000000"
        app:backgroundTint="#C411C8FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/create_an_account"
        android:layout_width="131dp"
        android:layout_height="53dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColorHighlight="#0C0909"
        android:textColorLink="#0E0A0A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <TextView
        android:id="@+id/forgota_password"
        android:layout_width="134dp"
        android:layout_height="52dp"
        android:text="@string/forgot_pass"
        android:textAlignment="center"
        android:textColorHighlight="#0C0909"
        android:textColorLink="#0E0A0A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="@android:style/Widget.Material.ProgressBar.Small"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/_googlebuton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="245dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:drawableLeft="@drawable/googleg_standard_color_18"
        android:onClick="onClick"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        android:shadowColor="#000000"
        android:text="@string/Sign_Google"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#BE146CAF"
        android:textColorHighlight="#F6EEEE"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/login_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:textColor="#000000"
        android:visibility="gone"
        app:backgroundTint="#C411C8FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_googlebuton"
        app:layout_constraintVertical_bias="0.771" />

</androidx.constraintlayout.widget.ConstraintLayout>